--- a/src/PC_MAN_1000.html
+++ b/src/PC_MAN_1000.html
@@ -170,7 +170,7 @@
 										<div class="swiper-slide">
 											<div class="best-menu__inner">
 												<div class="best-menu__img">
-													<img src="./assets/images/product.png" alt="">
+													<img src="./assets/images/product01.png" alt="">
 												</div>
 												<div class="best-menu__info best-menu__info--green">
 													<p class="best-menu__category">ACCESSORY</p>
@@ -198,7 +198,7 @@
 										<div class="swiper-slide">
 											<div class="best-menu__inner">
 												<div class="best-menu__img">
-													<img src="./assets/images/product.png" alt="">
+													<img src="./assets/images/product01.png" alt="">
 												</div>
 												<div class="best-menu__info best-menu__info--cyan">
 													<p class="best-menu__category">ACCESSORY</p>
@@ -226,7 +226,7 @@
 										<div class="swiper-slide">
 											<div class="best-menu__inner">
 												<div class="best-menu__img">
-													<img src="./assets/images/product.png" alt="">
+													<img src="./assets/images/product01.png" alt="">
 												</div>
 												<div class="best-menu__info best-menu__info--pink">
 													<p class="best-menu__category">ACCESSORY</p>
@@ -254,7 +254,7 @@
 										<div class="swiper-slide">
 											<div class="best-menu__inner">
 												<div class="best-menu__img">
-													<img src="./assets/images/product.png" alt="">
+													<img src="./assets/images/product01.png" alt="">
 												</div>
 												<div class="best-menu__info best-menu__info--yellow">
 													<p class="best-menu__category">ACCESSORY</p>
@@ -430,7 +430,7 @@
 										<div class="swiper-slide">
 											<div class="best-menu__inner">
 												<div class="best-menu__img">
-													<img src="./assets/images/product.png" alt="">
+													<img src="./assets/images/product01.png" alt="">
 												</div>
 												<div class="best-menu__info best-menu__info--purple">
 													<p class="best-menu__category">ACCESSORY</p>
@@ -458,7 +458,7 @@
 										<div class="swiper-slide">
 											<div class="best-menu__inner">
 												<div class="best-menu__img">
-													<img src="./assets/images/product.png" alt="">
+													<img src="./assets/images/product01.png" alt="">
 												</div>
 												<div class="best-menu__info best-menu__info--orange">
 													<p class="best-menu__category">ACCESSORY</p>
@@ -486,7 +486,7 @@
 										<div class="swiper-slide">
 											<div class="best-menu__inner">
 												<div class="best-menu__img">
-													<img src="./assets/images/product.png" alt="">
+													<img src="./assets/images/product01.png" alt="">
 												</div>
 												<div class="best-menu__info best-menu__info--green">
 													<p class="best-menu__category">ACCESSORY</p>
@@ -514,7 +514,7 @@
 										<div class="swiper-slide">
 											<div class="best-menu__inner">
 												<div class="best-menu__img">
-													<img src="./assets/images/product.png" alt="">
+													<img src="./assets/images/product01.png" alt="">
 												</div>
 												<div class="best-menu__info best-menu__info--green">
 													<p class="best-menu__category">ACCESSORY</p>
@@ -598,7 +598,7 @@
 													</div>
 													<div class="menu__item">
 														<a href="#" class="menu__link">
-															<div class="menu__round menu__round--yellow">
+															<div class="menu__round">
 																<div class="menu__inner">
 																	<div class="menu__img">
 																		<img src="./assets/images/product.png" alt="">
@@ -632,7 +632,7 @@
 													</div>
 													<div class="menu__item">
 														<a href="#" class="menu__link">
-															<div class="menu__round menu__round--yellow">
+															<div class="menu__round">
 																<div class="menu__inner">
 																	<div class="menu__img">
 																		<img src="./assets/images/product.png" alt="">
@@ -667,8 +667,11 @@
 					<ul class="menu__list">
 						<li class="menu__item">
 							<a href="#" class="menu__link">
-								<div class="menu__round menu__round--darkgreen">
+								<div class="menu__round">
 									<div class="menu__inner menu__inner--center">
+										<div class="menu__img">
+											<img src="../assets/images/product.png" alt="상품">
+										</div>
 										<p class="menu__category">OUTER</p>
 									</div>
 								</div>
@@ -676,8 +679,11 @@
 						</li>
 						<li class="menu__item">
 							<a href="#" class="menu__link">
-								<div class="menu__round menu__round--cyan">
+								<div class="menu__round">
 									<div class="menu__inner menu__inner--center">
+										<div class="menu__img">
+											<img src="../assets/images/product.png" alt="상품">
+										</div>
 										<p class="menu__category">BOTTOM</p>
 									</div>
 								</div>
@@ -685,8 +691,11 @@
 						</li>
 						<li class="menu__item">
 							<a href="#" class="menu__link">
-								<div class="menu__round menu__round--yellow">
+								<div class="menu__round">
 									<div class="menu__inner menu__inner--center">
+										<div class="menu__img">
+											<img src="../assets/images/product.png" alt="상품">
+										</div>
 										<p class="menu__category">TOP</p>
 									</div>
 								</div>
@@ -694,8 +703,11 @@
 						</li>
 						<li class="menu__item">
 							<a href="#" class="menu__link">
-								<div class="menu__round menu__round--darkpink">
+								<div class="menu__round">
 									<div class="menu__inner menu__inner--center">
+										<div class="menu__img">
+											<img src="../assets/images/product.png" alt="상품">
+										</div>
 										<p class="menu__category">ACC</p>
 									</div>
 								</div>
