--- a/src/product/PC_SHP_1000.html
+++ b/src/product/PC_SHP_1000.html
@@ -24,7 +24,7 @@
 					<ul class="menu__list">
 						<li class="menu__item">
 							<a href="#" class="menu__link">
-								<div class="menu__round menu__round--purple">
+								<div class="menu__round">
 									<div class="menu__inner">
 										<div class="menu__swiper swiper-container">
 											<ul class="menu__track swiper-wrapper">
@@ -48,7 +48,7 @@
 						</li>
 						<li class="menu__item">
 							<a href="#" class="menu__link menu__link--none">
-								<div class="menu__round menu__round--lightgreen">
+								<div class="menu__round">
 									<div class="menu__inner">
 										<!-- soldout -->
 										<div class="marquee">
@@ -102,7 +102,7 @@
 						</li>
 						<li class="menu__item">
 							<a href="#" class="menu__link">
-								<div class="menu__round menu__round--lightpink">
+								<div class="menu__round">
 									<div class="menu__inner">
 										<div class="menu__swiper swiper-container">
 											<ul class="menu__track swiper-wrapper">
