--- a/src/search/PC_ODR_1001.html
+++ b/src/search/PC_ODR_1001.html
@@ -29,7 +29,7 @@
 							<ul class="menu__list">
 								<li class="menu__item">
 									<a href="#" class="menu__link">
-										<div class="menu__round menu__round--purple">
+										<div class="menu__round">
 											<div class="menu__inner">
 												<div class="menu__swiper swiper-container">
 													<ul class="menu__track swiper-wrapper">
@@ -53,7 +53,7 @@
 								</li>
 								<li class="menu__item">
 									<a href="#" class="menu__link menu__link--none">
-										<div class="menu__round menu__round--lightgreen">
+										<div class="menu__round">
 											<div class="menu__inner">
 												<!-- soldout -->
 												<div class="marquee">
@@ -107,7 +107,7 @@
 								</li>
 								<li class="menu__item">
 									<a href="#" class="menu__link">
-										<div class="menu__round menu__round--lightpink">
+										<div class="menu__round">
 											<div class="menu__inner">
 												<div class="menu__swiper swiper-container">
 													<ul class="menu__track swiper-wrapper">
