--- a/src/product/PC_SHP_1001.html
+++ b/src/product/PC_SHP_1001.html
@@ -437,9 +437,19 @@
 									<p class="review__list--line"></p>
 								</li>
 							</ul>
-							<div class="review_paging">
-								<p><a href="#" class="btn__prev"><img src="../assets/images/btn_review_prev.gif" alt="이전 페이지" /></a></p>
-								<p><a href="#" class="btn__next"><img src="../assets/images/btn_review_next.gif" alt="다음 페이지" /></a></p>
+
+							<div class="list__bottom"> 
+								<div class="review_paging">
+									<p><a href="#" class="btn__prev"><img src="../assets/images/btn_review_prev.gif" alt="이전 페이지" /></a></p>
+									<div class="paging_number">
+										<p><span>1</span>/<span>9</span></p>
+									</div>
+									<p><a href="#" class="btn__next"><img src="../assets/images/btn_review_next.gif" alt="다음 페이지" /></a></p>
+								</div>
+
+								<div class="list__bottom--btn">
+									<a href="#" class="btn__underline">VIEW ALL</a>
+								</div>
 							</div>
 						</div>
 					</div>
