폴더구조 변경

--- a/src/product/PC_SHP_1001.html
+++ b/src/product/PC_SHP_1001.html
@@ -1,23 +1,20 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>인스턴트펑크 공식홈페이지 - 인스턴트펑크 INSTANTFUNK - 상품상세</title>
-	
-	<script src="../assets/js/jquery-2.1.1.js"></script>
-	<script src="../assets/js/modernizr.js"></script>
-	<script src="../assets/js/ui.js"></script>
-	<link rel="stylesheet" href="../assets/css/ui.css">
-	<link rel="stylesheet" href="../assets/css/product.css">
+	@@include('../inc/pagehead.inc', {
+		"pagetitle": "인스턴트펑크 공식홈페이지 - 인스턴트펑크 INSTANTFUNK - 상품상세",
+		"webroot": "."
+	})
+	<script src="/web/assets/js/modernizr.js"></script>
+	<script src="/web/assets/js/product.js"></script>
+	<link rel="stylesheet" href="/web/assets/css/product.css">
 </head>
 <body>
 	<div id="wrap">
-		<!-- @@include('../inc/header.inc', {
+		@@include('../inc/header.inc', {
 			"login": "false",
 			"webroot": ".."
-		}) -->
+		})
 
     <div class="container sub__container">
 
@@ -33,10 +30,10 @@
 					<div class="swiper-container productDetailswp">
 						<div class="swiper-wrapper">
 							<div class="swiper-slide">
-								<img src="../assets/images/temp/@product01.png" alt="">
+								<img src="/web/assets/images/temp/@product01.png" alt="">
 							</div>
 							<div class="swiper-slide">
-								<img src="../assets/images/temp/@product02.png" alt="">
+								<img src="/web/assets/images/temp/@product02.png" alt="">
 							</div>
 						</div>
 						<div class="swiper-pagination"></div>
@@ -74,9 +71,9 @@
 							</ul> -->
 
 							<div class="product__quantity">
-								<a href="#" class="qty_button"><img src="../assets/images/btn_count_down.gif" alt="수량감소"></a>
+								<a href="#" class="qty_button"><img src="/web/assets/images/btn_count_down.gif" alt="수량감소"></a>
 								<input type="text" value="1" class="qty_input" />
-								<a href="#" class="qty_button"><img src="../assets/images/btn_count_up.gif" alt="수량증가"></a>
+								<a href="#" class="qty_button"><img src="/web/assets/images/btn_count_up.gif" alt="수량증가"></a>
 							</div>
 						</div>
 
@@ -91,7 +88,7 @@
 							</div>
 							<ul class="product__reivew--list">
 								<li class="rv__item">
-									<p class="rv__figure"><img src="../assets/images/temp/@product01.png"></p>
+									<p class="rv__figure"><img src="/web/assets/images/temp/@product01.png"></p>
 									<p class="rv__box">
 										<span class="rv__writer">test***</span> 아기 로션 냄새가 날 것 같은 티 너무 예뻐서 애용중입니당 아기 로션 냄새가 날 것 같은 티 너무 예뻐서 애용중입니당
 									</p>
@@ -155,7 +152,7 @@
 								<a href="#" class="act__btn btn_soldout">SOLD OUT</a>
 							</div>
 							<div id="NaverChk_Button" class="product__naverchk">
-								<img src="../assets/images/temp/@naverpay.jpg">
+								<img src="/web/assets/images/temp/@naverpay.jpg">
 							</div>
 						</div>
 
@@ -165,7 +162,7 @@
 
 				<div class="product__additional">
 					<div id="prdDetail" class="detail__cont">
-						<img src="../assets/images/temp/@productdetail.jpg">
+						<img src="/web/assets/images/temp/@productdetail.jpg">
 					</div>
 
 					<div id="prdGuide" class="product__section">
@@ -222,7 +219,7 @@
 
 					<div id="prdTalkwalk" class="product__section product__talkwalk">
 						<div>
-							<img src="../assets/images/temp/@talkwalk.jpg">
+							<img src="/web/assets/images/temp/@talkwalk.jpg">
 						</div>
 					</div>
 
@@ -249,7 +246,7 @@
 								<li class="review__list--item">
 									<a href="#">
 										<div class="rv__product">
-											<p class="rv__figure"><img src="../assets/images/temp/@product01.png"></p>
+											<p class="rv__figure"><img src="/web/assets/images/temp/@product01.png"></p>
 											<div class="rv__box">
 												<p class="rv__prname">Rinen Striped Jacket</p>
 												<span class="rv__prcode">448374@N</span>
@@ -267,7 +264,7 @@
 												손올리묜 배는 살짝살짝 보여요! 제가원하던 느낌! <br>쟐입구있어영ㅎㅎ</p>
 											<p class="rv__thumnb">
 												<span>8<em>+</em></span>
-												<img src="../assets/images/dummy.png"></p>
+												<img src="/web/assets/images/dummy.png"></p>
 											</p>
 										</div>
 									</a>
@@ -291,7 +288,7 @@
 								<li class="review__list--item">
 									<a href="#">
 										<div class="rv__product">
-											<p class="rv__figure"><img src="../assets/images/temp/@product01.png"></p>
+											<p class="rv__figure"><img src="/web/assets/images/temp/@product01.png"></p>
 											<div class="rv__box">
 												<p class="rv__prname">Rinen Striped Jacket</p>
 												<span class="rv__prcode">448374@N</span>
@@ -307,7 +304,7 @@
 											<p class="rv__text">S은 크롭이래서 살짝 부담스러서 m샀는데 기장이 딱!!이에요</p>
 											<p class="rv__thumnb">
 												<span>8<em>+</em></span>
-												<img src="../assets/images/dummy.png"></p>
+												<img src="/web/assets/images/dummy.png"></p>
 											</p>
 										</div>
 									</a>
@@ -329,7 +326,7 @@
 								<li class="review__list--item">
 									<a href="#">
 										<div class="rv__product">
-											<p class="rv__figure"><img src="../assets/images/temp/@product01.png"></p>
+											<p class="rv__figure"><img src="/web/assets/images/temp/@product01.png"></p>
 											<div class="rv__box">
 												<p class="rv__prname">Rinen Striped Jacket</p>
 												<span class="rv__prcode">448374@N</span>
@@ -347,7 +344,7 @@
 												손올리묜 배는 살짝살짝 보여요! 제가원하던 느낌! <br>쟐입구있어영ㅎㅎ</p>
 											<p class="rv__thumnb">
 												<span>8<em>+</em></span>
-												<img src="../assets/images/dummy.png"></p>
+												<img src="/web/assets/images/dummy.png"></p>
 											</p>
 										</div>
 									</a>
@@ -369,7 +366,7 @@
 								<li class="review__list--item">
 									<a href="#">
 										<div class="rv__product">
-											<p class="rv__figure"><img src="../assets/images/temp/@product01.png"></p>
+											<p class="rv__figure"><img src="/web/assets/images/temp/@product01.png"></p>
 											<div class="rv__box">
 												<p class="rv__prname">Rinen Striped Jacket</p>
 												<span class="rv__prcode">448374@N</span>
@@ -405,7 +402,7 @@
 								<li class="review__list--item">
 									<a href="#">
 										<div class="rv__product">
-											<p class="rv__figure"><img src="../assets/images/temp/@product01.png"></p>
+											<p class="rv__figure"><img src="/web/assets/images/temp/@product01.png"></p>
 											<div class="rv__box">
 												<p class="rv__prname">Rinen Striped Jacket</p>
 												<span class="rv__prcode">448374@N</span>
@@ -438,8 +435,8 @@
 								</li>
 							</ul>
 							<div class="review_paging">
-								<p><a href="#" class="btn__prev"><img src="../assets/images/btn_review_prev.gif" alt="이전 페이지" /></a></p>
-								<p><a href="#" class="btn__next"><img src="../assets/images/btn_review_next.gif" alt="다음 페이지" /></a></p>
+								<p><a href="#" class="btn__prev"><img src="/web/assets/images/btn_review_prev.gif" alt="이전 페이지" /></a></p>
+								<p><a href="#" class="btn__next"><img src="/web/assets/images/btn_review_next.gif" alt="다음 페이지" /></a></p>
 							</div>
 						</div>
 					</div>
@@ -453,12 +450,8 @@
 
 		
 		@@include('../inc/footer.inc', {
-			"login": "false",
 			"webroot": ".."
 		})
 	</div>
-
-	<script src="../assets/js/swiper.min.js"></script>
-	<script src="../assets/js/product.js"></script>
 </body>
 </html>
