--- a/src/search/PC_ODR_1001.html
+++ b/src/search/PC_ODR_1001.html
@@ -1,16 +1,11 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>인스턴트펑크 공식홈페이지 - 인스턴트펑크 INSTANTFUNK</title>
-
-	<script src="../assets/js/jquery-2.1.1.js"></script>
-	<script src="../assets/js/swiper.min.js"></script>
-	<script src="../assets/js/ui.js"></script>
-	<link rel="stylesheet" href="../assets/css/ui.css">
-	<link rel="stylesheet" href="../assets/css/search.css">
+	@@include('../inc/pagehead.inc', {
+		"pagetitle": "인스턴트펑크 공식홈페이지 - 인스턴트펑크 INSTANTFUNK - 검색",
+		"webroot": "."
+	})
+	<link rel="stylesheet" href="/web/assets/css/search.css">
 </head>
 <body>
 	<div id="wrap">
@@ -34,22 +29,20 @@
 												<div class="menu__swiper swiper-container">
 													<ul class="menu__track swiper-wrapper">
 														<li class="menu__slide swiper-slide">
-															<div class="menu__img">
-																<img src="../assets/images/product.png" alt="상품">
-															</div>
+															<div class="menu__img"><img src="/web/assets/images/product.png" alt="상품"></div>
 														</li>
 													</ul>
 												</div>
 											</div>
 										</div>
-										<div class="menu__info">
-											<p class="menu__name">22SS 레이어드 크롭 자켓 핑크</p>
-											<div class="menu__right">
-												<p class="menu__discount">₩46,000</p>
-												<p class="menu__price">₩50,000(30%)</p>
-											</div>
-										</div>
 									</a>
+									<div class="menu__info">
+										<p class="menu__name">22SS 레이어드 크롭 자켓 핑크</p>
+										<div class="menu__right">
+											<p class="menu__discount">₩46,000</p>
+											<p class="menu__price">₩50,000(30%)</p>
+										</div>
+									</div>
 								</li>
 								<li class="menu__item">
 									<a href="#" class="menu__link menu__link--none">
@@ -88,22 +81,20 @@
 												<div class="menu__swiper swiper-container">
 													<ul class="menu__track swiper-wrapper">
 														<li class="menu__slide swiper-slide">
-															<div class="menu__img">
-																<img src="../assets/images/product.png" alt="상품">
-															</div>
+															<div class="menu__img"><img src="/web/assets/images/product.png" alt="상품"></div>
 														</li>
 													</ul>
 												</div>
 											</div>
 										</div>
-										<div class="menu__info">
-											<p class="menu__name">22SS 레이어드 크롭 자켓 핑크</p>
-											<div class="menu__right">
-												<span class="menu__coupon">COUPON</span>
-												<p class="menu__price">₩50,000</p>
-											</div>
-										</div>
 									</a>
+									<div class="menu__info">
+										<p class="menu__name">22SS 레이어드 크롭 자켓 핑크</p>
+										<div class="menu__right">
+											<span class="menu__coupon">COUPON</span>
+											<p class="menu__price">₩50,000</p>
+										</div>
+									</div>
 								</li>
 								<li class="menu__item">
 									<a href="#" class="menu__link">
@@ -112,22 +103,20 @@
 												<div class="menu__swiper swiper-container">
 													<ul class="menu__track swiper-wrapper">
 														<li class="menu__slide swiper-slide">
-															<div class="menu__img">
-																<img src="../assets/images/product.png" alt="상품">
-															</div>
+															<div class="menu__img"><img src="/web/assets/images/product.png" alt="상품"></div>
 														</li>
 													</ul>
 												</div>
 											</div>
 										</div>
-										<div class="menu__info">
-											<p class="menu__name">22SS 레이어드 크롭 자켓 핑크</p>
-											<div class="menu__right">
-												<span class="menu__coupon">COUPON</span>
-												<p class="menu__price">₩50,000</p>
-											</div>
-										</div>
 									</a>
+									<div class="menu__info">
+										<p class="menu__name">22SS 레이어드 크롭 자켓 핑크</p>
+										<div class="menu__right">
+											<span class="menu__coupon">COUPON</span>
+											<p class="menu__price">₩50,000</p>
+										</div>
+									</div>
 								</li>
 							</ul>
 						</div>
