--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>INSTANTPUNK HTML PATH</title>
-	<link rel="stylesheet" href="./assets/css/ui.css">
+	<link rel="stylesheet" href="web/assets/css/ui.css">
 </head>
 <body>
 	<div id="wrap">
