--- a/src/search/PC_ODR_1001.html
+++ b/src/search/PC_ODR_1001.html
@@ -27,8 +27,8 @@
 										<div class="menu__round">
 											<div class="menu__inner">
 												<div class="menu__swiper swiper-container">
-													<ul class="menu__track swiper-wrapper">
-														<li class="menu__slide swiper-slide">
+													<ul class="swiper-wrapper">
+														<li class="swiper-slide">
 															<div class="menu__img"><img src="/web/assets/images/product.png" alt="상품"></div>
 														</li>
 													</ul>
@@ -79,8 +79,8 @@
 												</div>
 												<!-- // soldout -->
 												<div class="menu__swiper swiper-container">
-													<ul class="menu__track swiper-wrapper">
-														<li class="menu__slide swiper-slide">
+													<ul class="swiper-wrapper">
+														<li class="swiper-slide">
 															<div class="menu__img"><img src="/web/assets/images/product.png" alt="상품"></div>
 														</li>
 													</ul>
@@ -101,8 +101,8 @@
 										<div class="menu__round">
 											<div class="menu__inner">
 												<div class="menu__swiper swiper-container">
-													<ul class="menu__track swiper-wrapper">
-														<li class="menu__slide swiper-slide">
+													<ul class="swiper-wrapper">
+														<li class="swiper-slide">
 															<div class="menu__img"><img src="/web/assets/images/product.png" alt="상품"></div>
 														</li>
 													</ul>
