상품상세 작업중

--- a/src/product/PC_SHP_1001.html
+++ b/src/product/PC_SHP_1001.html
@@ -142,10 +142,10 @@
 								</div>
 							</li>
 						</ul>
-
+						
 						<div class="product__action">
 							<div class="product__act--button">
-								<a href="#" class="act__btn btn_addtocart">CART</a>
+								<a onclick="$('#Product_BasketAdd').show();" class="act__btn btn_addtocart">CART</a>
 								<a href="#" class="act__btn btn_buynow">BUY</a>
 							</div>
 							<div class="product__act--button">
@@ -457,6 +457,31 @@
 			<!--// detail__container -->
 
     </div>
+
+		<!-- 장바구니담기 팝업 //-->
+		<div module="Product_BasketAdd" id="Product_BasketAdd" class="layer__body product_basketadd">
+			<div class="layer__wrap">
+				<div class="layer__close"><a onclick="$('#Product_BasketAdd').hide();" class="btn__close"><span class="a11y">닫기</span></a></div>
+				<div class="layer__content">
+					<i class="ico_basket"></i>
+					<p>장바구니에 상품이 정상적으로 담겼습니다.</p>
+					<div class="layer__button">
+						<a href="/order/basket.html?delvtype={$delvtype}" class="btn btn__basket">장바구니 이동</a>
+						<a href="#none" onclick="$('#confirmLayer').hide();" class="btn btn__shopping">쇼핑 계속하기</a>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<!-- 리뷰등록 팝업 //-->
+		<div module="Product_BasketAdd" id="Product_BasketAdd" class="layer__body product_basketadd" style="display: block">
+			<div class="layer__wrap">
+				<div class="layer__close"><a onclick="$('#Product_BasketAdd').hide();" class="btn__close"><span class="a11y">닫기</span></a></div>
+				<div class="layer__content">
+				</div>
+			</div>
+		</div>
+		
 
 		
 		@@include('../inc/footer.inc', {
