--- a/src/PC_MAN_1000.html
+++ b/src/PC_MAN_1000.html
@@ -26,7 +26,7 @@
 								<div class="swiper-slide">
 									<div class="visual__video">
 										<video loop muted poster="/web/assets/images/dummy.png">
-											<source src="../sample01.mp4" type="video/mp4">
+											<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4">
 										</video>
 									</div>
 									<div class="visual__contents">
@@ -43,7 +43,7 @@
 								<div class="swiper-slide">
 									<div class="visual__video">
 										<video loop muted poster="/web/assets/images/dummy.png">
-											<source src="../sample02.mp4" type="video/mp4">
+											<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ElephantsDream.mp4" type="video/mp4">
 										</video>
 									</div>
 									<div class="visual__contents">
@@ -60,7 +60,7 @@
 								<div class="swiper-slide">
 									<div class="visual__video">
 										<video loop muted poster="/web/assets/images/dummy.png">
-											<source src="../sample03.mp4" type="video/mp4">
+											<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ForBiggerBlazes.mp4" type="video/mp4">
 										</video>
 									</div>
 									<div class="visual__contents">
@@ -81,17 +81,17 @@
 							<div class="visual__preview">
 								<div class="visual__video">
 									<video autoplay loop muted>
-										<source src="../sample01.mp4" type="video/mp4">
+										<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4">
 									</video>
 								</div>
 								<div class="visual__video">
 									<video autoplay loop muted>
-										<source src="../sample02.mp4" type="video/mp4">
+										<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ElephantsDream.mp4" type="video/mp4">
 									</video>
 								</div>
 								<div class="visual__video">
 									<video autoplay loop muted>
-										<source src="../sample03.mp4" type="video/mp4">
+										<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ForBiggerBlazes.mp4" type="video/mp4">
 									</video>
 								</div>
 							</div>
