상품 - 리스트 작업중

--- a/src/product/PC_SHP_1000.html
+++ b/src/product/PC_SHP_1000.html
@@ -34,6 +34,7 @@
 														<div class="menu__img"><img src="/web/assets/images/product.png" alt="상품"></div>
 													</li>
 												</ul>
+												<div class="swiper-pagination"></div>
 											</div>
 										</a>
 										<div class="menu__layer">
@@ -127,6 +128,7 @@
 														<div class="menu__img"><img src="/web/assets/images/product.png" alt="상품"></div>
 													</li>
 												</ul>
+												<div class="swiper-pagination"></div>
 											</div>
 										</a>
 									</div>
@@ -149,6 +151,11 @@
 													CELEB
 												</span>
 											</div>
+											<div class="menu__colors">
+												<span class="menu__color"></span>
+												<span class="menu__color"></span>
+												<span class="menu__color"></span>
+											</div>
 											<div class="menu__swiper swiper-container">
 												<ul class="swiper-wrapper">
 													<li class="swiper-slide">
@@ -158,6 +165,7 @@
 														<div class="menu__img"><img src="/web/assets/images/dummy.png" alt="상품"></div>
 													</li>
 												</ul>
+												<div class="swiper-pagination"></div>
 											</div>
 										</a>
 									</div>
@@ -189,6 +197,7 @@
 														<div class="menu__img"><img src="/web/assets/images/dummy.png" alt="상품"></div>
 													</li>
 												</ul>
+												<div class="swiper-pagination"></div>
 											</div>
 										</a>
 									</div>
@@ -220,6 +229,7 @@
 														<div class="menu__img"><img src="/web/assets/images/dummy.png" alt="상품"></div>
 													</li>
 												</ul>
+												<div class="swiper-pagination"></div>
 											</div>
 										</a>
 									</div>
