상세 작업중

--- a/src/product/PC_SHP_1000.html
+++ b/src/product/PC_SHP_1000.html
@@ -18,6 +18,7 @@
 
     <div class="container">
 			<div class="product-list">
+				<div class="product-list__sort"></div>
 				<div class="menu">
 					<div class="menu__container">
 						<ul class="menu__list">
@@ -25,6 +26,11 @@
 								<div class="menu__round">
 									<div class="menu__inner">
 										<a href="#" class="menu__link">
+											<div class="menu__colors">
+												<span class="menu__color"></span>
+												<span class="menu__color"></span>
+												<span class="menu__color"></span>
+											</div>
 											<div class="menu__swiper swiper-container">
 												<ul class="swiper-wrapper">
 													<li class="swiper-slide">
@@ -119,6 +125,11 @@
 												</div>
 											</div>
 											<!-- // soldout -->
+											<div class="menu__colors">
+												<span class="menu__color"></span>
+												<span class="menu__color"></span>
+												<span class="menu__color"></span>
+											</div>
 											<div class="menu__swiper swiper-container">
 												<ul class="swiper-wrapper">
 													<li class="swiper-slide">
@@ -131,6 +142,43 @@
 												<div class="swiper-pagination"></div>
 											</div>
 										</a>
+										<div class="menu__layer">
+											<div class="menu__dimmed"></div>
+											<div class="menu__buttons">
+												<button type="button" class="menu__button menu__button--cart">CART</button>
+												<a href="#" class="menu__button">DETAIL</a>
+											</div>
+											<div class="menu__option">
+												<div class="menu__sizes">
+													<div>
+														<button type="button" class="menu__size menu__size--selected">F</button>
+													</div>
+													<div>
+														<button type="button" class="menu__size">S</button>
+													</div>
+													<div>
+														<button type="button" class="menu__size">M</button>
+													</div>
+													<div>
+														<button type="button" class="menu__size">L</button>
+													</div>
+													<div>
+														<button type="button" class="menu__size menu__size--disabled">XL</button>
+													</div>
+												</div>
+												<div class="menu__count">
+													<button type="button" class="menu__button"><img src="../web/assets/images/btn_count_down.gif" alt=""></button>
+													<span class="menu__current">1</span>
+													<button type="button"><img src="../web/assets/images/btn_count_up.gif" alt=""></button>
+												</div>
+												<div class="menu__buttons">
+													<button type="button" class="menu__button">ADD TO CART</button>
+												</div>
+												<button class="menu__close">
+													<span class="a11y">닫기</span>
+												</button>
+											</div>
+										</div>
 									</div>
 								</div>
 								<div class="menu__info">
@@ -168,6 +216,43 @@
 												<div class="swiper-pagination"></div>
 											</div>
 										</a>
+										<div class="menu__layer">
+											<div class="menu__dimmed"></div>
+											<div class="menu__buttons">
+												<button type="button" class="menu__button menu__button--cart">CART</button>
+												<a href="#" class="menu__button">DETAIL</a>
+											</div>
+											<div class="menu__option">
+												<div class="menu__sizes">
+													<div>
+														<button type="button" class="menu__size menu__size--selected">F</button>
+													</div>
+													<div>
+														<button type="button" class="menu__size">S</button>
+													</div>
+													<div>
+														<button type="button" class="menu__size">M</button>
+													</div>
+													<div>
+														<button type="button" class="menu__size">L</button>
+													</div>
+													<div>
+														<button type="button" class="menu__size menu__size--disabled">XL</button>
+													</div>
+												</div>
+												<div class="menu__count">
+													<button type="button" class="menu__button"><img src="../web/assets/images/btn_count_down.gif" alt=""></button>
+													<span class="menu__current">1</span>
+													<button type="button"><img src="../web/assets/images/btn_count_up.gif" alt=""></button>
+												</div>
+												<div class="menu__buttons">
+													<button type="button" class="menu__button">ADD TO CART</button>
+												</div>
+												<button class="menu__close">
+													<span class="a11y">닫기</span>
+												</button>
+											</div>
+										</div>
 									</div>
 								</div>
 								<div class="menu__info">
@@ -188,6 +273,11 @@
 													PICKS
 												</span>
 											</div>
+											<div class="menu__colors">
+												<span class="menu__color"></span>
+												<span class="menu__color"></span>
+												<span class="menu__color"></span>
+											</div>
 											<div class="menu__swiper swiper-container">
 												<ul class="swiper-wrapper">
 													<li class="swiper-slide">
@@ -200,6 +290,43 @@
 												<div class="swiper-pagination"></div>
 											</div>
 										</a>
+										<div class="menu__layer">
+											<div class="menu__dimmed"></div>
+											<div class="menu__buttons">
+												<button type="button" class="menu__button menu__button--cart">CART</button>
+												<a href="#" class="menu__button">DETAIL</a>
+											</div>
+											<div class="menu__option">
+												<div class="menu__sizes">
+													<div>
+														<button type="button" class="menu__size menu__size--selected">F</button>
+													</div>
+													<div>
+														<button type="button" class="menu__size">S</button>
+													</div>
+													<div>
+														<button type="button" class="menu__size">M</button>
+													</div>
+													<div>
+														<button type="button" class="menu__size">L</button>
+													</div>
+													<div>
+														<button type="button" class="menu__size menu__size--disabled">XL</button>
+													</div>
+												</div>
+												<div class="menu__count">
+													<button type="button" class="menu__button"><img src="../web/assets/images/btn_count_down.gif" alt=""></button>
+													<span class="menu__current">1</span>
+													<button type="button"><img src="../web/assets/images/btn_count_up.gif" alt=""></button>
+												</div>
+												<div class="menu__buttons">
+													<button type="button" class="menu__button">ADD TO CART</button>
+												</div>
+												<button class="menu__close">
+													<span class="a11y">닫기</span>
+												</button>
+											</div>
+										</div>
 									</div>
 								</div>
 								<div class="menu__info">
@@ -220,6 +347,11 @@
 													FUNKY
 												</span>
 											</div>
+											<div class="menu__colors">
+												<span class="menu__color"></span>
+												<span class="menu__color"></span>
+												<span class="menu__color"></span>
+											</div>
 											<div class="menu__swiper swiper-container">
 												<ul class="swiper-wrapper">
 													<li class="swiper-slide">
@@ -232,6 +364,43 @@
 												<div class="swiper-pagination"></div>
 											</div>
 										</a>
+										<div class="menu__layer">
+											<div class="menu__dimmed"></div>
+											<div class="menu__buttons">
+												<button type="button" class="menu__button menu__button--cart">CART</button>
+												<a href="#" class="menu__button">DETAIL</a>
+											</div>
+											<div class="menu__option">
+												<div class="menu__sizes">
+													<div>
+														<button type="button" class="menu__size menu__size--selected">F</button>
+													</div>
+													<div>
+														<button type="button" class="menu__size">S</button>
+													</div>
+													<div>
+														<button type="button" class="menu__size">M</button>
+													</div>
+													<div>
+														<button type="button" class="menu__size">L</button>
+													</div>
+													<div>
+														<button type="button" class="menu__size menu__size--disabled">XL</button>
+													</div>
+												</div>
+												<div class="menu__count">
+													<button type="button" class="menu__button"><img src="../web/assets/images/btn_count_down.gif" alt=""></button>
+													<span class="menu__current">1</span>
+													<button type="button"><img src="../web/assets/images/btn_count_up.gif" alt=""></button>
+												</div>
+												<div class="menu__buttons">
+													<button type="button" class="menu__button">ADD TO CART</button>
+												</div>
+												<button class="menu__close">
+													<span class="a11y">닫기</span>
+												</button>
+											</div>
+										</div>
 									</div>
 								</div>
 								<div class="menu__info">
